# WSS_Consulting_test

./: .env.example  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/crud/: ticket.py  user.py
app/db/: session.py
app/models/: __init__.py  ticket.py  user.py
app/routers/: __init__.py  auth.py  tickets.py  users.py
app/schemas/: ticket.py  token.py  user.py
app/services/: email.py
migrations/: env.py
migrations/versions/: eb096c0861db_init.py
